fix flake task name

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  flake8:
+  unittest:
     runs-on: ubuntu-latest
     container: python:3.12-slim-bullseye
     services:
