--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,7 +22,11 @@ jobs:
       - uses: actions/checkout@v3
       - name: Install flake8
         run: pip install poetry
+      - name: Install os dependencies
+        run: apt-get install --no-install-recommends build-essential apt-utils procps libgdal-dev gettext curl dos2unix -y
       - name: Install poetry
-        run: poetry install
+        run: |
+          poetry install
+          poetry config virtualenvs.create false
       - name: Run test
         run: python manage.py test
